--- a/gradle.properties
+++ b/gradle.properties
@@ -9,8 +9,8 @@ org.gradle.jvmargs=-Xmx1G
 
 # Mod Properties
 	mod_version = 1.0.0
-	maven_group = com.worldofpannotia.minecraft
-	archives_base_name = pannotias-parcels-mod
+	maven_group = com.worldofpannotia
+	archives_base_name = pannotiasparcels-mod
 
 # Dependencies
 	fabric_version=0.44.0+1.18
